<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="theakki.synctool.Wizzard_New3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Caption_SchedulingTrigger"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Caption_Scheduler"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <Switch
            android:id="@+id/sw_SchedulerActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:splitTrack="false"
            android:text="@string/Label_SchedulerActive"
            android:textOff="@string/Value_NotActive"
            android:textOn="@string/Value_Active" />

        <TextView
            android:id="@+id/txt_Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"/>


        <TimePicker
            android:id="@+id/time_Scheduler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Button_Back"
                style="?android:buttonBarButtonStyle"/>

            <Button
                android:id="@+id/btn_Next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Button_Next"
                style="?android:buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
