<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_JobName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/JobInfo_DummyName"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        tools:text="TestJob" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_Active"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/JobInfo_Active"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_Status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/JobInfo_DummyStatus"
                android:textAppearance="@android:style/TextAppearance.Material.Caption"
                tools:text="Übertrage Dateien" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_ActNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/JobInfo_Dummy0"
                    tools:text="1256" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/JobInfo_Slash"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/txt_MaxNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/JobInfo_Dummy0"
                    tools:text="45689" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/pb_Status"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>